# pypisearch

./: .gitignore  README.md  packages.marisa  pyproject.toml
.github/workflows/: ci.yml
src/pypisearch/: __main__.py  dataset.py  index.py  metrics.py  utils.py
src/pypisearch/metrics/: __init__.py  memory.py  time.py
